--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
-  text-align: center;
+  column-count: 5;         
+  column-gap: 20px;        
+  padding: 20px;
+  background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.movieContainer{
+  display: inline-block;   
+  width: 100%;             
+  margin-bottom: 20px;      
+  background: black;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.movieContainer img {
+  width: 100%;
+  height: auto; 
+  display: block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2{
+  font-size: 2em;
+  margin: 10px;
+  text-align: center;              
+  white-space: normal;           
+  word-wrap: break-word;        
+  overflow-wrap: break-word;     
+  line-height: 1.4;   
+  color: brown;
 }
